[gd_scene load_steps=28 format=3 uid="uid://cvwocvqq1rvew"]

[ext_resource type="Script" path="res://scripts/base.gd" id="1_1hgot"]
[ext_resource type="Theme" uid="uid://wv5v1o64kbws" path="res://ui/themes/default_interface.tres" id="2_n5cs3"]
[ext_resource type="Texture2D" uid="uid://b47k2pg7xj7xo" path="res://data/textures/icons_trimmed.png" id="3_mlu88"]
[ext_resource type="Texture2D" uid="uid://rypgaskiayxv" path="res://data/textures/icon_atlas1.tres" id="4_o0361"]
[ext_resource type="PackedScene" uid="uid://xhg4bqu6m3jl" path="res://scenes/gas_giant.tscn" id="5_0y37k"]
[ext_resource type="Script" path="res://scripts/cam_scaled.gd" id="6_u4qtv"]
[ext_resource type="PackedScene" uid="uid://c4weja143s0g4" path="res://scenes/instancer.tscn" id="7_5ikl7"]
[ext_resource type="PackedScene" uid="uid://cnhotw0s7wl50" path="res://scenes/navpoint.tscn" id="8_cqm1p"]
[ext_resource type="Script" path="res://scripts/FreeLookCamera.gd" id="9_7e6nc"]
[ext_resource type="Shader" path="res://shaders/nav_mesh.gdshader" id="10_n7knu"]
[ext_resource type="Script" path="res://scripts/testROTREF.gd" id="11_1thn5"]
[ext_resource type="Script" path="res://scripts/cam_track.gd" id="12_qaevn"]
[ext_resource type="Script" path="res://scripts/ReflectionProbeAligner.gd" id="13_djnw7"]
[ext_resource type="Material" uid="uid://ym6o1f38v4eh" path="res://materials/solar_panels.tres" id="14_6viye"]
[ext_resource type="Script" path="res://scripts/PlayerInputHandler.gd" id="15_2vea2"]
[ext_resource type="Shader" path="res://shaders/nebula_to_equirect.gdshader" id="16_22wmu"]

[sub_resource type="ViewportTexture" id="ViewportTexture_dnsyy"]
viewport_path = NodePath("SubViewport")

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_34c8p"]
resource_local_to_scene = true
panorama = SubResource("ViewportTexture_dnsyy")

[sub_resource type="Sky" id="Sky_0anrx"]
resource_local_to_scene = true
sky_material = SubResource("PanoramaSkyMaterial_34c8p")
radiance_size = 4

[sub_resource type="Environment" id="Environment_ogc01"]
resource_local_to_scene = true
background_mode = 2
sky = SubResource("Sky_0anrx")
ambient_light_source = 3
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.61
reflected_light_source = 1
tonemap_mode = 3
tonemap_exposure = 0.92
tonemap_white = 0.6
glow_enabled = true
glow_bloom = 0.49
adjustment_enabled = true
adjustment_contrast = 1.01

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1mj"]
atlas = ExtResource("3_mlu88")
region = Rect2(162, 810, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqbb2"]
atlas = ExtResource("3_mlu88")
region = Rect2(324, 324, 162, 162)

[sub_resource type="PrismMesh" id="PrismMesh_eex47"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t8o0c"]
render_priority = 0
shader = ExtResource("10_n7knu")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/wire_color = Color(0.384314, 1, 0.352941, 1)
shader_parameter/wire_width = 1.561
shader_parameter/wire_smoothness = 0.01

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_a3umw"]
auto_exposure_min_sensitivity = 49.08

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hgedn"]
material = ExtResource("14_6viye")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o8lp7"]
shader = ExtResource("16_22wmu")
shader_parameter/dust_density = 0.055
shader_parameter/star_bloom = 0.022
shader_parameter/star_color = Color(0.619608, 0.698039, 0.458824, 1)
shader_parameter/nebula_density_range0 = Color(0.772549, 0.976471, 0.866667, 1)
shader_parameter/nebula_density_range1 = Color(0.184314, 0.266667, 0.141176, 1)
shader_parameter/core_color = Color(0.8, 1, 1, 1)
shader_parameter/core_factor = 2.404
shader_parameter/edge_color = Color(0.654902, 0.47451, 0.27451, 1)
shader_parameter/edge_factor = 1.293

[node name="base" type="Node3D"]
script = ExtResource("1_1hgot")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 13.9771, 3.86948, -6.63642)
light_color = Color(0.345098, 0.611765, 0.745098, 1)
light_energy = 0.1
shadow_bias = 0.567
shadow_normal_bias = 0.333
shadow_transmittance_bias = -1.87
shadow_blur = 0.772

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 13.9771, 3.86948, 18.8248)
light_color = Color(0.972549, 0.956863, 0.913725, 1)
shadow_enabled = true
shadow_blur = 0.459

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ogc01")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="FlowContainer" type="FlowContainer" parent="SubViewportContainer"]
layout_mode = 2
theme = ExtResource("2_n5cs3")

[node name="ItemList" type="ItemList" parent="SubViewportContainer/FlowContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.427298, 0.668871, 0.49691, 1)
theme_override_colors/font_outline_color = Color(0.427451, 0.670588, 0.498039, 1)
auto_height = true
item_count = 4
item_0/text = "Idle"
item_0/selectable = false
item_1/text = "Translation"
item_1/selectable = false
item_2/text = "Orientation"
item_2/selectable = false
item_3/text = "AI Auto program"
item_3/selectable = false

[node name="Button_change_ship" type="Button" parent="SubViewportContainer/FlowContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.427298, 0.668871, 0.49691, 1)
theme_override_colors/font_outline_color = Color(0.427451, 0.670588, 0.498039, 1)
text = "change_ship"
icon = SubResource("AtlasTexture_gx1mj")
alignment = 0
text_overrun_behavior = 3
clip_text = true
expand_icon = true

[node name="Button_change_navpoint" type="Button" parent="SubViewportContainer/FlowContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0.427298, 0.668871, 0.49691, 1)
theme_override_colors/font_outline_color = Color(0.427451, 0.670588, 0.498039, 1)
text = "change_nav_point"
icon = ExtResource("4_o0361")
alignment = 0
text_overrun_behavior = 3
clip_text = true
expand_icon = true

[node name="Aggressive_mode" type="CheckButton" parent="SubViewportContainer/FlowContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_outline_color = Color(0.427451, 0.670588, 0.498039, 1)
text = "Aggressive Mode
"
icon = SubResource("AtlasTexture_sqbb2")
text_overrun_behavior = 2
clip_text = true
expand_icon = true

[node name="DirectControlButton" type="CheckButton" parent="SubViewportContainer/FlowContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.427451, 0.670588, 0.498039, 1)
text = "cam_mode	"

[node name="SubViewport_planets" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
screen_space_aa = 1
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Node3D" parent="SubViewportContainer/SubViewport_planets" instance=ExtResource("5_0y37k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.16454, 0, 0.618969)

[node name="cam_planets" type="Camera3D" parent="SubViewportContainer/SubViewport_planets" node_paths=PackedStringArray("master")]
cull_mask = 2
fov = 60.0
script = ExtResource("6_u4qtv")
master = NodePath("../../SubViewport_objects/cam_track")
factor = 10000.0

[node name="SubViewport_objects" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
screen_space_aa = 1
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="ship_Instancer" parent="SubViewportContainer/SubViewport_objects" instance=ExtResource("7_5ikl7")]
cube_size = 2
delta = 20.0

[node name="navpoint_Instancer" parent="SubViewportContainer/SubViewport_objects" instance=ExtResource("7_5ikl7")]
model_scene = ExtResource("8_cqm1p")
cube_size = 10
direct_transforms = true
delta = 40.0

[node name="cam_dev" type="Camera3D" parent="SubViewportContainer/SubViewport_objects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00601, 44.9752)
cull_mask = 1048573
current = true
script = ExtResource("9_7e6nc")

[node name="ROTREF" type="MeshInstance3D" parent="SubViewportContainer/SubViewport_objects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.323559, 20.3751, 44.2456)
mesh = SubResource("PrismMesh_eex47")
surface_material_override/0 = SubResource("ShaderMaterial_t8o0c")
script = ExtResource("11_1thn5")

[node name="cam_track" type="Camera3D" parent="SubViewportContainer/SubViewport_objects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.50848)
cull_mask = 1048573
attributes = SubResource("CameraAttributesPractical_a3umw")
current = true
fov = 60.0
script = ExtResource("12_qaevn")

[node name="ReflectionProbe" type="ReflectionProbe" parent="SubViewportContainer/SubViewport_objects/cam_track"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.50848)
max_distance = 20.0
size = Vector3(5, 5, 5)
script = ExtResource("13_djnw7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport_objects/cam_track"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.1053, 0, -6.91094)
visible = false
mesh = SubResource("CapsuleMesh_hgedn")
skeleton = NodePath("../..")

[node name="PlayerInputHandler" type="Node" parent="."]
script = ExtResource("15_2vea2")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
msaa_2d = 2
screen_space_aa = 1
size = Vector2i(4096, 2048)
render_target_update_mode = 1

[node name="ColorRect" type="ColorRect" parent="SubViewport"]
material = SubResource("ShaderMaterial_o8lp7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="item_clicked" from="SubViewportContainer/FlowContainer/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="item_selected" from="SubViewportContainer/FlowContainer/ItemList" to="." method="_on_nav_mode_list_item_selected"]
[connection signal="pressed" from="SubViewportContainer/FlowContainer/Button_change_ship" to="." method="_on_button_change_ship_pressed"]
[connection signal="pressed" from="SubViewportContainer/FlowContainer/Button_change_ship" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/FlowContainer/Button_change_navpoint" to="." method="_on_button_pressed"]
[connection signal="toggled" from="SubViewportContainer/FlowContainer/Aggressive_mode" to="." method="_on_aggressive_mode_toggled"]
[connection signal="toggled" from="SubViewportContainer/FlowContainer/DirectControlButton" to="." method="_on_direct_control_button_toggled"]

[editable path="SubViewportContainer/SubViewport_planets/Node3D"]
